--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,26 @@
     "debug": "DEBUG=server:* npm start"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "~1.15.2",
+    "config": "^3.3.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "morgan": "~1.7.0",
+    "express-session": "^1.17.1",
+    "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.21",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta6",
     "serve-favicon": "~2.3.0",
-    "sql.js": "^1.3.0"
+    "sql.js": "^1.3.0",
+    "uuid4": "^2.0.2",
+    "uuidv4": "^6.1.1"
   }
 }
